# detectra

./: CMakeLists.txt  IDEAS.md  README.md
app/: CMakeLists.txt  main.cpp
include/controllers/: detector_box_file_manager_controller.hpp  object_detector_controller.hpp  register_controllers.hpp
include/core/: detector_box.hpp  detector_box_file_manager.hpp  model_info.hpp  object_detector.hpp
qml/: BottomPanel.qml  CMakeLists.txt  LeftPanel.qml  MainMenuBar.qml  MainToolBar.qml  MainWindow.qml
qml/CenterViewer/: CenterViewer.qml  DetectorBoxes.qml  ImageDropArea.qml  PlaceholderText.qml
qml/actions/: DetectorBoxesFileManagerActions.qml  DetectorModelActions.qml  ImageActions.qml
qml/components/: BottomPanel.qml  DetectionActions.qml  LeftPanel.qml  MainMenuBar.qml  MainToolBar.qml  RightPanel.qml
qml/components/CenterViewer/: CenterViewer.qml  ImageActions.qml  ImageDropArea.qml  PlaceholderText.qml
qml/delegates/: DetectorBoxesDelegate.qml  RenderDetectorBoxesDelegate.qml
src/: CMakeLists.txt
src/controllers/: detector_box_file_manager_controller.cpp  object_detector_controller.cpp  register_controllers.cpp
src/core/: detector_box_file_manager.cpp
tests/: CMakeLists.txt
tests/backend/: CMakeLists.txt
tests/backend/controllers/: test_detector_box_file_manager_controller.cpp  test_object_detector_controller.cpp
tests/backend/core/: test_detector_box.cpp  test_detector_box_file_manager.cpp  test_model_info.cpp  test_object_detector.cpp
tests/backend/mocks/: mock_object_detector.hpp
tests/qml/: CMakeLists.txt  main.cpp  tst_BottomPanel.qml  tst_DetectionActions.qml  tst_MainMenuBar.qml  tst_MainToolBar.qml  tst_MainWindow.qml
tests/qml/CenterViewer/: tst_CenterViewer.qml  tst_ImageActions.qml  tst_ImageDropArea.qml  tst_PlaceholderText.qml
